[FIX] Some spacing

--- a/pages/regulation/regulaation.module.scss
+++ b/pages/regulation/regulaation.module.scss
@@ -79,4 +79,10 @@
         font-size: .8rem;
         color: #fff;
     }
+
+    // p last child
+    p:last-child {
+        margin-top: .5rem;
+        margin-bottom: 0;
+    }
 }
